--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "symfony/web-link": "7.0.*",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
+        "guzzlehttp/guzzle": "^7.8",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
