added custom auth

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,14 +1,17 @@
 security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
-    password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+#    password_hashers:
+#        App\Entity\User: 'auto'
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
-        app_user_provider:
-            entity:
-                class: App\Entity\User
-                property: email
+#        app_user_provider:
+#            entity:
+#                class: App\Entity\User
+#                property: email
+        custom_user_provider:
+            id: App\Security\CustomUserProvider
 
     firewalls:
         dev:
@@ -16,13 +19,15 @@ security:
             security: false
         main:
             lazy: true
-            provider: app_user_provider
+            provider: custom_user_provider
+            custom_authenticator: App\Security\AuthenticationListener
             form_login:
                 login_path: app_login
                 check_path: app_login
-                enable_csrf: true
+                default_target_path: app_mainapp
             logout:
                 path: app_logout
+                target: app_login
                 # where to redirect after logout
                 # target: app_any_route
 
